@@ -4,6 +4,7 @@ version 0.4.1 - dd-mmm-yyyy
  . CocosNode: added stopAction method (to remove just 1 one action)
  . Demo: ClickAndMove demo working again (issue 12)
  . Demo: SpritesDemo using back, restart & forward arrows
+ . Demo: TransitionsDemo using back, restart & forward arrows
  . Director: added eventsEnabled. You can enable/disabled touch events globally (eg: Transitions want this feature)
  . Director: implementation file reorganized
  . Director: drawScene renamed to mainLoop
